(feat): triangle area calculate css file

--- a/triangleArea/index.html
+++ b/triangleArea/index.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Area</title>
     <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>calculate triangle area:</h1>
-    <form>
-        <input type="text" placeholder="lado1" id="lado1">
-        <input type="text" placeholder="lado2" id="lado2">
-        <input type="text" placeholder="lado3" id="lado3">
-        <button type="submit">calcular</button>
-    </form>
+    <div>
+        <h1>calculate triangle area:</h1>
+        <form>
+            <input type="text" placeholder="lado1" id="lado1">
+            <input type="text" placeholder="lado2" id="lado2">
+            <input type="text" placeholder="lado3" id="lado3">
+            <button type="submit">calcular</button>
+        </form>
+    </div>
     <ul id="resultado"></ul>
 </body>
 </html>
