(feat):validation form

--- a/triangleArea/index.html
+++ b/triangleArea/index.html
@@ -15,7 +15,7 @@
             <input type="text" placeholder="lado1" id="lado1">
             <input type="text" placeholder="lado2" id="lado2">
             <input type="text" placeholder="lado3" id="lado3">
-            <button type="submit">calcular</button>
+            <button type="submit" id="submit">calcular</button>
         </form>
     </div>
     <ul id="resultado"></ul>
